[gd_scene load_steps=7 format=3 uid="uid://dvau8vwplhbfp"]

[ext_resource type="Script" uid="uid://2i6dg1lf1ia1" path="res://Game/CMS/Demo/scenes/dice.gd" id="1_lfmm5"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ef07l"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25
shadow_size = 13
shadow_offset = Vector2(8.135, 8.26)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0hi5s"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(0.080783375, 0.08078333, 0.080783345, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
corner_detail = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hv5lm"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(0.15487596, 0.154876, 0.15487596, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
corner_detail = 5

[sub_resource type="Gradient" id="Gradient_ef07l"]
offsets = PackedFloat32Array(0, 0.5835694)
colors = PackedColorArray(0, 0, 0, 1, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_lfmm5"]
gradient = SubResource("Gradient_ef07l")
width = 512
height = 512
fill = 1
fill_from = Vector2(0.5, 0.5)

[node name="Dice" type="Node2D"]
script = ExtResource("1_lfmm5")

[node name="Base" type="Panel" parent="."]
offset_left = -166.0
offset_top = -167.0
offset_right = 166.0
offset_bottom = 165.0
theme_override_styles/panel = SubResource("StyleBoxFlat_ef07l")

[node name="NameLabel" type="Label" parent="."]
offset_left = -164.0
offset_top = 178.0
offset_right = 168.0
offset_bottom = 228.0
theme_override_constants/outline_size = 13
theme_override_font_sizes/font_size = 36
text = "Name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Panel" type="Panel" parent="."]
offset_left = -182.0
offset_top = -550.0
offset_right = 178.0
offset_bottom = -218.0
theme_override_styles/panel = SubResource("StyleBoxFlat_0hi5s")

[node name="Header" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -171.0
offset_top = -548.0
offset_right = 165.0
offset_bottom = -491.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0.45882353, 0, 1)
theme_override_constants/outline_size = 13
theme_override_font_sizes/font_size = 41
text = "dice description"
horizontal_alignment = 1
autowrap_mode = 3

[node name="Panel2" type="Panel" parent="."]
offset_left = -165.40424
offset_top = -487.0
offset_right = 161.40424
offset_bottom = -231.0
theme_override_styles/panel = SubResource("StyleBoxFlat_hv5lm")

[node name="DescriptionLabel" type="Label" parent="Panel2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -168.0
offset_top = -126.0
offset_right = 168.0
offset_bottom = 123.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/outline_size = 13
theme_override_font_sizes/font_size = 26
text = "dice description"
horizontal_alignment = 1
autowrap_mode = 3

[node name="VisualElements" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="Eyes" type="Node2D" parent="VisualElements"]
visible = false

[node name="SingleEye" type="Node2D" parent="VisualElements/Eyes"]
position = Vector2(-100, 42)

[node name="Polygon2D" type="Polygon2D" parent="VisualElements/Eyes/SingleEye"]
position = Vector2(1, 0)
color = Color(0, 0, 0, 1)
offset = Vector2(107, 0)
polygon = PackedVector2Array(-143, 3, -140, -9, -120, -13, -95, -13, -77, -10, -72, 2, -80, 11, -106, 16, -132, 11)

[node name="Polygon2D2" type="Polygon2D" parent="VisualElements/Eyes/SingleEye"]
position = Vector2(1, 0)
scale = Vector2(0.71, 0.71)
offset = Vector2(107, 0)
polygon = PackedVector2Array(-143, 3, -140, -9, -120, -13, -95, -13, -77, -10, -72, 2, -80, 11, -106, 16, -132, 11)

[node name="Polygon2D3" type="Polygon2D" parent="VisualElements/Eyes/SingleEye"]
position = Vector2(100, 9)
color = Color(0.100378074, 0.00015496899, 0.2198638, 1)
polygon = PackedVector2Array(-104, -1, -109, -7, -104, -15, -95, -15, -92, -10, -95, -1)

[node name="SingleEye2" type="Node2D" parent="VisualElements/Eyes"]
position = Vector2(22, -86)

[node name="Polygon2D" type="Polygon2D" parent="VisualElements/Eyes/SingleEye2"]
position = Vector2(1, 0)
color = Color(0, 0, 0, 1)
offset = Vector2(107, 0)
polygon = PackedVector2Array(-143, 3, -140, -9, -120, -13, -95, -13, -77, -10, -72, 2, -80, 11, -106, 16, -132, 11)

[node name="Polygon2D2" type="Polygon2D" parent="VisualElements/Eyes/SingleEye2"]
position = Vector2(1, 0)
scale = Vector2(0.71, 0.71)
offset = Vector2(107, 0)
polygon = PackedVector2Array(-143, 3, -140, -9, -120, -13, -95, -13, -77, -10, -72, 2, -80, 11, -106, 16, -132, 11)

[node name="Polygon2D3" type="Polygon2D" parent="VisualElements/Eyes/SingleEye2"]
position = Vector2(100, 9)
color = Color(0.100378074, 0.00015496899, 0.2198638, 1)
polygon = PackedVector2Array(-104, -1, -109, -7, -104, -15, -95, -15, -92, -10, -95, -1)

[node name="SingleEye3" type="Node2D" parent="VisualElements/Eyes"]
position = Vector2(93, 94)

[node name="Polygon2D" type="Polygon2D" parent="VisualElements/Eyes/SingleEye3"]
position = Vector2(1, 0)
color = Color(0, 0, 0, 1)
offset = Vector2(107, 0)
polygon = PackedVector2Array(-143, 3, -140, -9, -120, -13, -95, -13, -77, -10, -72, 2, -80, 11, -106, 16, -132, 11)

[node name="Polygon2D2" type="Polygon2D" parent="VisualElements/Eyes/SingleEye3"]
position = Vector2(1, 0)
scale = Vector2(0.71, 0.71)
offset = Vector2(107, 0)
polygon = PackedVector2Array(-143, 3, -140, -9, -120, -13, -95, -13, -77, -10, -72, 2, -80, 11, -106, 16, -132, 11)

[node name="Polygon2D3" type="Polygon2D" parent="VisualElements/Eyes/SingleEye3"]
position = Vector2(100, 9)
color = Color(0.100378074, 0.00015496899, 0.2198638, 1)
polygon = PackedVector2Array(-104, -1, -109, -7, -104, -15, -95, -15, -92, -10, -95, -1)

[node name="SingleEye4" type="Node2D" parent="VisualElements/Eyes"]
position = Vector2(22, 1)

[node name="Polygon2D" type="Polygon2D" parent="VisualElements/Eyes/SingleEye4"]
position = Vector2(1, 0)
color = Color(0, 0, 0, 1)
offset = Vector2(107, 0)
polygon = PackedVector2Array(-143, 3, -140, -9, -120, -13, -95, -13, -77, -10, -72, 2, -80, 11, -106, 16, -132, 11)

[node name="Polygon2D2" type="Polygon2D" parent="VisualElements/Eyes/SingleEye4"]
position = Vector2(1, 0)
scale = Vector2(0.71, 0.71)
offset = Vector2(107, 0)
polygon = PackedVector2Array(-143, 3, -140, -9, -120, -13, -95, -13, -77, -10, -72, 2, -80, 11, -106, 16, -132, 11)

[node name="Polygon2D3" type="Polygon2D" parent="VisualElements/Eyes/SingleEye4"]
position = Vector2(100, 9)
color = Color(0.100378074, 0.00015496899, 0.2198638, 1)
polygon = PackedVector2Array(-104, -1, -109, -7, -104, -15, -95, -15, -92, -10, -95, -1)

[node name="SingleEye5" type="Node2D" parent="VisualElements/Eyes"]
position = Vector2(127, -142)

[node name="Polygon2D" type="Polygon2D" parent="VisualElements/Eyes/SingleEye5"]
position = Vector2(1, 0)
color = Color(0, 0, 0, 1)
offset = Vector2(107, 0)
polygon = PackedVector2Array(-143, 3, -140, -9, -120, -13, -95, -13, -77, -10, -72, 2, -80, 11, -106, 16, -132, 11)

[node name="Polygon2D2" type="Polygon2D" parent="VisualElements/Eyes/SingleEye5"]
position = Vector2(1, 0)
scale = Vector2(0.71, 0.71)
offset = Vector2(107, 0)
polygon = PackedVector2Array(-143, 3, -140, -9, -120, -13, -95, -13, -77, -10, -72, 2, -80, 11, -106, 16, -132, 11)

[node name="Polygon2D3" type="Polygon2D" parent="VisualElements/Eyes/SingleEye5"]
position = Vector2(100, 9)
color = Color(0.100378074, 0.00015496899, 0.2198638, 1)
polygon = PackedVector2Array(-104, -1, -109, -7, -104, -15, -95, -15, -92, -10, -95, -1)

[node name="SingleEye6" type="Node2D" parent="VisualElements/Eyes"]
position = Vector2(-97, 135)

[node name="Polygon2D" type="Polygon2D" parent="VisualElements/Eyes/SingleEye6"]
position = Vector2(1, 0)
color = Color(0, 0, 0, 1)
offset = Vector2(107, 0)
polygon = PackedVector2Array(-143, 3, -140, -9, -120, -13, -95, -13, -77, -10, -72, 2, -80, 11, -106, 16, -132, 11)

[node name="Polygon2D2" type="Polygon2D" parent="VisualElements/Eyes/SingleEye6"]
position = Vector2(1, 0)
scale = Vector2(0.71, 0.71)
offset = Vector2(107, 0)
polygon = PackedVector2Array(-143, 3, -140, -9, -120, -13, -95, -13, -77, -10, -72, 2, -80, 11, -106, 16, -132, 11)

[node name="Polygon2D3" type="Polygon2D" parent="VisualElements/Eyes/SingleEye6"]
position = Vector2(100, 9)
color = Color(0.100378074, 0.00015496899, 0.2198638, 1)
polygon = PackedVector2Array(-104, -1, -109, -7, -104, -15, -95, -15, -92, -10, -95, -1)

[node name="Sword" type="Node2D" parent="VisualElements"]
visible = false
position = Vector2(45, -8)

[node name="shadow" type="Sprite2D" parent="VisualElements/Sword"]
position = Vector2(-243.00003, 55.999996)
rotation = -0.5235988
scale = Vector2(0.16688451, 0.6839862)
texture = SubResource("GradientTexture2D_lfmm5")

[node name="Polygon2D" type="Polygon2D" parent="VisualElements/Sword"]
position = Vector2(-210, 107)
color = Color(0.4, 0.23137255, 0.17254902, 1)
offset = Vector2(210, -107)
polygon = PackedVector2Array(-206, 124, -195, 117, -214, 91, -223, 97)

[node name="Polygon2D4" type="Polygon2D" parent="VisualElements/Sword"]
position = Vector2(-233.00002, 73)
scale = Vector2(1.4138063, 1.5266622)
color = Color(0.52693844, 0.7206835, 0.84292465, 1)
offset = Vector2(210, -107)
polygon = PackedVector2Array(-206, 124, -195, 117, -248.90207, 43.4627, -260.92633, 36.25744, -257.38977, 49.357914)

[node name="Polygon2D5" type="Polygon2D" parent="VisualElements/Sword"]
position = Vector2(-261, 33)
scale = Vector2(1.409, 1.522)
color = Color(0.29129773, 0.484708, 0.600141, 1)
offset = Vector2(229.80467, -80.79905)
polygon = PackedVector2Array(-204.25464, 119.563835, -200.70602, 116.935715, -251.09637, 46.633476, -256.06445, 42.691296, -253.93526, 48.60457)

[node name="Polygon2D3" type="Polygon2D" parent="VisualElements/Sword"]
position = Vector2(-220.73666, 90.5862)
rotation = 1.5707964
scale = Vector2(1.4138063, 1.5266622)
color = Color(0.23487619, 0.4040914, 0.5074514, 1)
offset = Vector2(210, -107)
polygon = PackedVector2Array(-206, 124, -195, 117, -214, 91, -223, 97)

[node name="Polygon2D2" type="Polygon2D" parent="VisualElements/Sword"]
position = Vector2(-193, 131)
color = Color(0.31194973, 0.3714087, 0.540023, 1)
offset = Vector2(210, -107)
polygon = PackedVector2Array(-220, 117, -207, 113, -199, 104, -202, 93, -214, 91, -223, 97, -226, 108)

[node name="FireBall" type="Node2D" parent="VisualElements"]
visible = false
position = Vector2(150, -48)

[node name="Polygon2D" type="Polygon2D" parent="VisualElements/FireBall"]
position = Vector2(58, -105)
color = Color(1, 0.105882354, 0.105882354, 1)
polygon = PackedVector2Array(82, 123, 59, 115, 51, 89, 55, 57, 59, 68, 65, 37, 60, 22, 69, 6, 73, 20, 67, 28, 74, 40, 82, 6, 83, -15, 73, -32, 67, -26, 66, -39, 75, -44, 77, -34, 86, -43, 79, -56, 87, -67, 90, -79, 93, -69, 87, -59, 95, -47, 94, -34, 109, -36, 104, -27, 98, -28, 104, -13, 114, -4, 108, 0, 104, -5, 107, 17, 115, 30, 120, 39, 113, 63, 123, 51, 119, 69, 113, 81, 124, 79, 116, 95, 117, 106, 98, 121)

[node name="Polygon2D2" type="Polygon2D" parent="VisualElements/FireBall"]
position = Vector2(141, -6.9999933)
scale = Vector2(0.7, 0.7)
color = Color(1, 0.65882355, 0.105882354, 1)
offset = Vector2(-83, -98)
polygon = PackedVector2Array(82, 123, 59, 115, 51, 89, 55, 57, 59, 68, 65, 37, 60, 22, 69, 6, 73, 20, 67, 28, 74, 40, 82, 6, 83, -15, 73, -32, 67, -26, 66, -39, 75, -44, 77, -34, 86, -43, 79, -56, 87, -67, 90, -79, 93, -69, 87, -59, 95, -47, 94, -34, 109, -36, 104, -27, 98, -28, 104, -13, 114, -4, 108, 0, 104, -5, 107, 17, 115, 30, 120, 39, 113, 63, 123, 51, 119, 69, 113, 81, 124, 79, 116, 95, 117, 106, 98, 121)

[node name="Polygon2D3" type="Polygon2D" parent="VisualElements/FireBall"]
position = Vector2(141, -6.9999933)
scale = Vector2(0.42, 0.42)
color = Color(1, 0.7874061, 0.53053486, 1)
offset = Vector2(-83, -98)
polygon = PackedVector2Array(82, 123, 59, 115, 51, 89, 55, 57, 59, 68, 65, 37, 60, 22, 69, 6, 73, 20, 67, 28, 74, 40, 82, 6, 83, -15, 73, -32, 67, -26, 66, -39, 75, -44, 77, -34, 86, -43, 79, -56, 87, -67, 90, -79, 93, -69, 87, -59, 95, -47, 94, -34, 109, -36, 104, -27, 98, -28, 104, -13, 114, -4, 108, 0, 104, -5, 107, 17, 115, 30, 120, 39, 113, 63, 123, 51, 119, 69, 113, 81, 124, 79, 116, 95, 117, 106, 98, 121)

[node name="hand" type="Polygon2D" parent="VisualElements/FireBall"]
position = Vector2(-104.00001, -64)
rotation = -0.5235988
scale = Vector2(1.595, 1.595)
polygon = PackedVector2Array(16.510715, 99.30229, 14.920811, 107.07176, 19.868961, 113.54833, 24.044674, 118.85498, 28.886318, 131.78561, 36.420277, 151.33829, 47.631992, 165.77483, 59.62218, 162.56207, 71.94835, 153.7517, 96.914185, 135.58797, 112.74411, 143.27946, 116.19238, 137.30688, 102.93179, 128.92693, 103.01579, 127.52753, 108.842896, 128.71994, 112.26866, 127.80202, 100.38498, 124.560715, 92.90648, 127.482506, 87.140854, 129.94534, 76.298096, 137.4403, 65.16434, 140.42358, 53.924084, 149.86093, 51.881245, 137.09828, 55.979, 124.985115, 46.586666, 103.635544, 38.67171, 99.789795, 38.800716, 88.28108, 30.197315, 81.866, 14.719868, 82.34144)

[node name="SunGlasses" type="Node2D" parent="VisualElements"]
visible = false

[node name="Polygon2D" type="Polygon2D" parent="VisualElements/SunGlasses"]
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(-166, -54, -189, -34, -185, -26, -165, -46, -101, -45, -100, -11, -92, -11, -92, -2, -85, -2, -84, 6, -12, 6, -12, -5, 0, -6, -1, -45, 53, -45, 54, -7, 61, -6, 61, 5, 125, 5, 125, -6, 133, -7, 132, -45, 166, -45, 166, -55)

[node name="Polygon2D" type="Polygon2D" parent="VisualElements/SunGlasses/Polygon2D"]
polygon = PackedVector2Array(-76, -31, -66, -31, -66, -23, -76, -23)

[node name="Polygon2D2" type="Polygon2D" parent="VisualElements/SunGlasses/Polygon2D"]
position = Vector2(10, 8)
polygon = PackedVector2Array(-76, -31, -66, -31, -66, -23, -76, -23)

[node name="Polygon2D3" type="Polygon2D" parent="VisualElements/SunGlasses/Polygon2D"]
position = Vector2(21, 17)
polygon = PackedVector2Array(-76, -31, -66, -31, -66, -23, -76, -23)

[node name="Polygon2D4" type="Polygon2D" parent="VisualElements/SunGlasses/Polygon2D"]
position = Vector2(21, 17)
polygon = PackedVector2Array(-76, -31, -66, -31, -66, -23, -76, -23)

[node name="Polygon2D5" type="Polygon2D" parent="VisualElements/SunGlasses/Polygon2D"]
position = Vector2(143, -3)
polygon = PackedVector2Array(-76, -31, -66, -31, -66, -23, -76, -23)

[node name="Polygon2D6" type="Polygon2D" parent="VisualElements/SunGlasses/Polygon2D"]
position = Vector2(153, 5)
polygon = PackedVector2Array(-76, -31, -66, -31, -66, -23, -76, -23)

[node name="Polygon2D7" type="Polygon2D" parent="VisualElements/SunGlasses/Polygon2D"]
position = Vector2(164, 14)
polygon = PackedVector2Array(-76, -31, -66, -31, -66, -23, -76, -23)

[node name="Polygon2D8" type="Polygon2D" parent="VisualElements/SunGlasses/Polygon2D"]
position = Vector2(164, 14)
polygon = PackedVector2Array(-76, -31, -66, -31, -66, -23, -76, -23)

[node name="RolledValueLabel" type="Label" parent="."]
z_index = 1
offset_left = -45.0
offset_top = -115.0
offset_right = 47.0
offset_bottom = 106.0
theme_override_constants/outline_size = 75
theme_override_font_sizes/font_size = 161
